Fix dark mode

--- a/style.scss
+++ b/style.scss
@@ -9,10 +9,14 @@ $h6-font-size: 0.9em;
 
 $navbar-bg: white;
 $body-color: black;
-$code-color: $body-color;
 $primary: rgb(18, 84, 127);  // darker
 // $primary: rgb(26, 94, 173);  // lighter
 
+$code-font-size: 0.85em;
+$code-color: $primary;
+
+$link-decoration: none;
+$link-hover-decoration: underline;
 
 // /*-- scss:rules --*/
 
@@ -26,24 +30,6 @@ h1, h2, h3, h4, h5, h6 {
 
 .navbar {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
-  a:hover {
-    text-decoration: none !important;
-  }
-  // font-size: 0.95em;
-}
-.navbar-title {
-  // font-size: 0.95em;
-}
-
-a, a:link {
-  text-decoration: none !important;
-}
-a:hover {
-  text-decoration: underline !important;
-}
-
-pre, code {
-    font-size: 12.5px !important;
 }
 
 span.header-section-number::after {
@@ -60,9 +46,9 @@ span.header-section-number::after {
 }
 
 .quarto-listing-table th {
-    border-bottom-color: black;
+    // border-bottom-color: black;
     border-bottom-width: 1px;
-    border-top-color: black;
+    // border-top-color: black;
     border-top-width: 0px;
     padding-bottom: 3px !important;
 }
